package app.domain.store;

public class ParameterCategoryStore {

}
