package app.domain.store;

public class TestTypeStore {

}
